# entrait-dependency-inversion

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
framework/: Cargo.toml
framework/src/: lib.rs
middle/: Cargo.toml
middle/src/: lib.rs
src/: main.rs
