[package]
name = "rust-dependency-inversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "framework" }
core = { path = "core" }
middle = { path = "middle" }
implementation = "0.1"

[workspace]
members = [
    "core",
    "middle"
]
