[package]
name = "entrait-dependency-inversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = ["domain/nightly", "intermediate/nightly"]

[dependencies]
framework = { path = "framework" }
domain = { path = "domain" }
intermediate = { path = "intermediate" }
implementation = "0.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[workspace]
members = [
    "domain",
    "intermediate"
]
